--- a/Nodes/indx.html
+++ b/Nodes/indx.html
@@ -7,12 +7,16 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
- <section class="dark:bg-gray-800 dark:text-gray-100">
+ <section class="dark:bg-gray-800 h-screen dark:text-gray-100">
 	<div class="container mx-auto flex flex-col items-center px-4 py-16 text-center md:py-32 md:px-10 lg:px-32 xl:max-w-3xl">
-		<h1 class="text-4xl font-bold leadi sm:text-5xl">Quisquam necessita vel
-			<span class="dark:text-violet-400">laborum doloribus</span>delectus
+		<h1 class="text-4xl font-black leadi sm:text-5xl">I love
+			<span class="dark:text-violet-400">Co..</span> Node pala hehe
 		</h1>
 	</div>
+ <div class="flex items-center justify-center ">
+  <img src="/gif.gif" class="w-[12rem]" alt="">
+ </div>
+ 
 </section>
  
 </body>
