--- a/Nodes/indx.html
+++ b/Nodes/indx.html
@@ -14,7 +14,7 @@
 		</h1>
 	</div>
  <div class="flex items-center justify-center ">
-  <img src="/gif.gif" class="w-[12rem]" alt="">
+  <img src="/sumin.jpg" class="w-[12rem] rounded-md" alt="">
  </div>
  
 </section>
